--- a/ProyectoPelicula/src/main/resources/static/eliminarPelicula.html
+++ b/ProyectoPelicula/src/main/resources/static/eliminarPelicula.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Eliminar Pelicula</title>
-</head>
-<body>
-<h1>Eliminar Pelicula</h1>
-<form action="/esborrarPelicula" method="post">
-    <label>ID de la Pelicula a eliminar:</label>
-    <input type="text" name="id" required />
-    <button type="submit">Eliminar</button>
-</form>
-</body>
-</html>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <title>Eliminar Pelicula</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Eliminar Pelicula</h1>-->
+<!--<form action="/esborrarPelicula" method="post">-->
+<!--    <label>ID de la Pelicula a eliminar:</label>-->
+<!--    <input type="text" name="id" required />-->
+<!--    <button type="submit">Eliminar</button>-->
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
