--- a/ProyectoPelicula/src/main/resources/static/index.html
+++ b/ProyectoPelicula/src/main/resources/static/index.html
@@ -1,49 +1,77 @@
+<!--&lt;!&ndash;<!DOCTYPE html>&ndash;&gt;-->
+<!--&lt;!&ndash;<html lang="en">&ndash;&gt;-->
+<!--&lt;!&ndash;<head>&ndash;&gt;-->
+<!--&lt;!&ndash;    <meta charset="UTF-8">&ndash;&gt;-->
+<!--&lt;!&ndash;    <title>Title</title>&ndash;&gt;-->
+<!--&lt;!&ndash;    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"&ndash;&gt;-->
+<!--&lt;!&ndash;          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">&ndash;&gt;-->
+<!--&lt;!&ndash;    <link rel="stylesheet" type="text/css" th:href="@{/estils/estils.css}" />&ndash;&gt;-->
+<!--&lt;!&ndash;</head>&ndash;&gt;-->
+<!--&lt;!&ndash;<body>&ndash;&gt;-->
+<!--&lt;!&ndash;MENU<br>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="/afegirAlumne.html">Afegir Alumne </a> <br>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="/consultarAlumnes">Consultar Alumnes</a> <br>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="/esborrarAlumne.html">Esborrar Alumne </a> <br>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="/modificarAlumne.html"> Modificar Alumne </a> <br>&ndash;&gt;-->
+<!--&lt;!&ndash;</body>&ndash;&gt;-->
+<!--&lt;!&ndash;</html>&ndash;&gt;-->
+
 <!--<!DOCTYPE html>-->
 <!--<html lang="en">-->
 <!--<head>-->
 <!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
+<!--    <title>Gestió de Pel·lícules</title>-->
 <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"-->
 <!--          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
 <!--    <link rel="stylesheet" type="text/css" th:href="@{/estils/estils.css}" />-->
 <!--</head>-->
 <!--<body>-->
-<!--MENU<br>-->
-<!--<a href="/afegirAlumne.html">Afegir Alumne </a> <br>-->
-<!--<a href="/consultarAlumnes">Consultar Alumnes</a> <br>-->
-<!--<a href="/esborrarAlumne.html">Esborrar Alumne </a> <br>-->
-<!--<a href="/modificarAlumne.html"> Modificar Alumne </a> <br>-->
+<!--<div class="container">-->
+<!--    <h1>Gestió de Pel·lícules</h1>-->
+<!--    <nav>-->
+<!--        <ul class="list-group">-->
+<!--            <li class="list-group-item">-->
+<!--                <a href="/afegirPelicula.html">Afegir Pelicula</a>-->
+<!--            </li>-->
+<!--            <li class="list-group-item">-->
+<!--                <a href="/consultarPelicula.html">Consultar Pelicules</a>-->
+<!--            </li>-->
+<!--            <li class="list-group-item">-->
+<!--                <a href="/eliminarPelicula.html">Esborrar Pelicula</a>-->
+<!--            </li>-->
+<!--            <li class="list-group-item">-->
+<!--                <a href="/modificarPelicula.html">Modificar Pelicula</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+<!--</div>-->
 <!--</body>-->
 <!--</html>-->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Gestió de Pel·lícules</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/estils/estils.css}" />
+    <title>Catàleg de Pel·lícules</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-    <h1>Gestió de Pel·lícules</h1>
-    <nav>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <a href="/afegirPelicula.html">Afegir Pel·lícula</a>
-            </li>
-            <li class="list-group-item">
-                <a href="/consultarPelicula.html">Consultar Pel·lícules</a>
-            </li>
-            <li class="list-group-item">
-                <a href="/eliminarPelicula.html">Esborrar Pel·lícula</a>
-            </li>
-            <li class="list-group-item">
-                <a href="/modificarPelicula.html">Modificar Pelicula</a>
-            </li>
-        </ul>
-    </nav>
+    <h1>Pel·lícules disponibles</h1>
+
+    <form method="get" th:action="@{/consultar}">
+        <input type="text" name="titol" placeholder="Cerca per títol" />
+        <button type="submit">Cercar</button>
+    </form>
+
+    <ul th:if="${pelis}" th:each="peli : ${pelis}">
+        <li>
+            <strong th:text="${peli.titol}"></strong> –
+            <span th:text="${peli.director}"></span> (
+            <span th:text="${peli.any}"></span>)<br>
+            <em th:text="${peli.descripcio}"></em>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
